--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,9 @@ body{
   font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;
   font-size:20px;
 }
+#welcome-section{
+  height: 100%;		
+}	
 h2,h3{
   color:#888;
   font-weight:bold;
