--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body{
   font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;
   font-size:20px;
 }
-#welcome-section{
+#WELCOME-SECTION{
   height: 100%;		
 }	
 h2,h3{
